### Helpers
set(REAL_SANDBOX_TARGET_NAME "${META_REAL_PROJECT_NAME}-sandbox")

### Target
add_executable(
		${REAL_SANDBOX_TARGET_NAME}
		EXCLUDE_FROM_ALL
		sandbox.cpp
)

target_link_libraries(
		${REAL_SANDBOX_TARGET_NAME}
		PRIVATE
		${REAL_LIBRARY_TARGET_NAME}
)

## RenderDoc
set(REAL_RDOC_WORKING_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
set(REAL_RDOC_SANDBOX_FILE "$<TARGET_FILE:${REAL_SANDBOX_TARGET_NAME}>")
set(REAL_RDOC_CONFIG_OUTFILE "${CMAKE_BINARY_DIR}/rdoc/settings.cap")

configure_file("${CMAKE_SOURCE_DIR}/rdoc/settings.cap" "${REAL_RDOC_CONFIG_OUTFILE}")

# FIXME: solve problem with single and multiconfig generators
if (CMAKE_CONFIGURATION_TYPES)
	file(
			GENERATE
			OUTPUT "${REAL_RDOC_CONFIG_OUTFILE}.$<CONFIG>"
			INPUT "${REAL_RDOC_CONFIG_OUTFILE}"
	)
else ()
	file(
			GENERATE
			OUTPUT "${REAL_RDOC_CONFIG_OUTFILE}"
			INPUT "${REAL_RDOC_CONFIG_OUTFILE}"
	)
endif ()